Bug #24717 CommittedRead of non-existsing record can get 4012 during node restart
Submitted: 30 Nov 2006 10:33 Modified: 6 Dec 2006 12:32
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:4.1,5.0,5.1 OS:
Assigned to: Jonas Oreland Target Version:

[30 Nov 2006 10:33] Jonas Oreland
Description:
If connection has not been established, tckeyref is sent info /dev/null.

Conclusion, TCKEYREF needs to be routed like TRANSID_AI_R or KEYINFO_R

How to repeat:
 

Suggested fix:
[1 Dec 2006 9:06] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/16275

ChangeSet@1.2273, 2006-12-01 09:06:01+01:00, jonas@perch.ndb.mysql.com +10 -0
  ndb - bug#24717
    5.0 version
    Add some extra state to try to prevent sending committedread to node too early
[1 Dec 2006 9:37] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/16276

ChangeSet@1.2335, 2006-12-01 09:37:17+01:00, jonas@perch.ndb.mysql.com +7 -0
  ndb - bug#24717
    5.1 version
    remove 5.0 version
    add general routing signal
    send tckeyref routed if needed...
[1 Dec 2006 10:29] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/16281

ChangeSet@1.2274, 2006-12-01 10:25:11+01:00, jonas@perch.ndb.mysql.com +5 -0
  ndb -
    add testcase for bug#24717
   + fix typo
[1 Dec 2006 11:09] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/16289

ChangeSet@1.2338, 2006-12-01 11:08:53+01:00, jonas@perch.ndb.mysql.com +3 -0
  ndb - bug#24717
    fixes to testprogram to test new impl. in 5.1
[5 Dec 2006 15:19] Jonas Oreland
wont fix in 4.1
[6 Dec 2006 12:32] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix for 5.0.32 and 5.1.14.
[4 Jan 2007 15:02] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/17626