ndb - bug#24717   5.0 version   Add some extra state to try to prevent sending committedread to node too early